--- a/helm/document-management/prod.yaml
+++ b/helm/document-management/prod.yaml
@@ -44,25 +44,25 @@ env:
   PUBSUB_EMULATOR_HOST: false # set actual "host:port" to enable or false to disable
   PUBSUB_EMULATOR_ENABLED: false
   # cwb06-events publisher topics separated by comma
-  PUBLISHER_TOPICS: projects/cwb06-prod/topics/APPLICATION_ROLE_REPORTING
+  PUBLISHER_TOPICS: projects/cwb06-prod-1f77/topics/APPLICATION_ROLE_REPORTING
   DOCUMENT_QUALITY_PROCESSOR_ID: "ad1db70046f8448"
   DOCUMENT_ID_PROOFING_PROCESSOR_ID: "cc68b2a5201d5a20"
   # end of infrastructure selector configs
   ALLOWED_ORIGINS: "http://localhost:4200, http://localhost:4201, https://api.cwb06.dsgov.demo.nuvalence.io, https://agency.cwb06.dsgov.demo.nuvalence.io, https://public.cwb06.dsgov.demo.nuvalence.io, https://employer.cwb06.dsgov.demo.nuvalence.io"
-  GCP_PROJECT_ID: "cwb06-prod"
+  GCP_PROJECT_ID: "cwb06-prod-1f77"
   CERBOS_URI: "127.0.0.1:3592"
   DB_CONNECTION_URL: "jdbc:postgresql://127.0.0.1:5432/cwb06-prod-document-management-db"
-  DB_USERNAME: "${sm://projects/cwb06-prod/secrets/cwb06-prod-db-user/versions/latest}"
-  DB_PASSWORD: "${sm://projects/cwb06-prod/secrets/cwb06-prod-db-pass/versions/latest}"
-  SELF_SIGN_PUBLIC_KEY: "${sm://projects/cwb06-prod/secrets/cwb06-self-signed-token-public-key/versions/latest}"
-  SELF_SIGN_PRIVATE_KEY: "${sm://projects/cwb06-prod/secrets/cwb06-self-signed-token-private-key/versions/latest}"
+  DB_USERNAME: "${sm://projects/cwb06-prod-1f77/secrets/cwb06-prod-db-user/versions/latest}"
+  DB_PASSWORD: "${sm://projects/cwb06-prod-1f77/secrets/cwb06-prod-db-pass/versions/latest}"
+  SELF_SIGN_PUBLIC_KEY: "${sm://projects/cwb06-prod-1f77/secrets/cwb06-self-signed-token-public-key/versions/latest}"
+  SELF_SIGN_PRIVATE_KEY: "${sm://projects/cwb06-prod-1f77/secrets/cwb06-self-signed-token-private-key/versions/latest}"
   USER_MANAGEMENT_BASE_URL: "http://cwb06-user-management/um"
-  PUBSUB_CLAMAV_TOPIC: "projects/cwb06-prod/topics/NEW_FILE_UPLOAD"
-  PUBSUB_DOCUMENT_PROCESSING_TOPIC: "projects/cwb06-prod/topics/DOCUMENT_PROCESSING_REQUESTS"
-  PUBSUB_DOCUMENT_PROCESSING_RESULT_TOPIC: "projects/cwb06-prod/topics/DOCUMENT_PROCESSING_RESULTS"
-  PUBSUB_CLAMAV_SUBSCRIPTION: "projects/cwb06-prod/subscriptions/NEW_FILE_UPLOAD_SUBSCRIPTION"
-  PUBSUB_DOCUMENT_PROCESSING_SUBSCRIPTION: "projects/cwb06-prod/subscriptions/DOCUMENT_PROCESSING_SUBSCRIPTION"
-  PUBSUB_DOCUMENT_PROCESSING_RESULT_DEAD_LETTER_TOPIC: "projects/cwb06-prod/topics/DOCUMENT_PROCESSING_DEAD_LETTER"
+  PUBSUB_CLAMAV_TOPIC: "projects/cwb06-prod-1f77/topics/NEW_FILE_UPLOAD"
+  PUBSUB_DOCUMENT_PROCESSING_TOPIC: "projects/cwb06-prod-1f77/topics/DOCUMENT_PROCESSING_REQUESTS"
+  PUBSUB_DOCUMENT_PROCESSING_RESULT_TOPIC: "projects/cwb06-prod-1f77/topics/DOCUMENT_PROCESSING_RESULTS"
+  PUBSUB_CLAMAV_SUBSCRIPTION: "projects/cwb06-prod-1f77/subscriptions/NEW_FILE_UPLOAD_SUBSCRIPTION"
+  PUBSUB_DOCUMENT_PROCESSING_SUBSCRIPTION: "projects/cwb06-prod-1f77/subscriptions/DOCUMENT_PROCESSING_SUBSCRIPTION"
+  PUBSUB_DOCUMENT_PROCESSING_RESULT_DEAD_LETTER_TOPIC: "projects/cwb06-prod-1f77/topics/DOCUMENT_PROCESSING_DEAD_LETTER"
   UNSCANNED_BUCKET_NAME: cwb06-prod-unscanned
   QUARANTINED_BUCKET_NAME: cwb06-prod-quarantined
   SCANNED_BUCKET_NAME: cwb06-prod-scanned
